@@ -64,84 +64,25 @@
       <scope>compile</scope>
     </dependency>
 
+    <!-- Source: https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+    <dependency>
+      <groupId>tech.grasshopper</groupId>
+      <artifactId>extentreports-cucumber7-adapter</artifactId>
+      <version>1.14.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <source>9</source>
-          <target>9</target>
-          <encoding>UTF-8</encoding>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.2</version> <!-- Or your current version -->
         <configuration>
-          <testFailureIgnore>true</testFailureIgnore>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>net.masterthought</groupId>
-        <artifactId>maven-cucumber-reporting</artifactId>
-        <version>5.8.5</version>
-        <executions>
-          <execution>
-            <id>execution</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <configuration>
-              <projectName>RestAssuredTestingFramework</projectName>
-              <!-- optional, per documentation set this to "true"
-              to bypass generation of Cucumber Reports entirely,
-              defaults to false if not specified -->
-              <skip>false</skip>
-              <!-- output directory for the generated report -->
-              <outputDirectory>${project.build.directory}</outputDirectory>
-              <!-- optional, defaults to outputDirectory if not
-              specified -->
-              <inputDirectory>
-                ${project.build.directory}/jsonReports
-              </inputDirectory>
-              <jsonFiles>
-                <!-- supports wildcard or name pattern -->
-                <param>**/*.json</param>
-              </jsonFiles>
-              <!-- optional, defaults to outputDirectory if not
-              specified -->
-              <classifications>
-                <classification>
-                  <name>Browser</name>
-                  <value>Chrome</value>
-                </classification>
-                <classification>
-                  <name>Environment</name>
-                  <value>TE</value>
-                </classification>
-                <classification>
-                  <name>Platform</name>
-                  <value>Windows</value>
-                </classification>
-              </classifications>
-              <!-- optional, set true to group features by its Ids -->
-              <mergeFeaturesById>false</mergeFeaturesById>
-              <!-- optional, set true to get a final report with
-              latest results of the same test from different test
-              runs -->
-              <mergeFeaturesWithRetest>false</mergeFeaturesWithRetest>
-              <!-- optional, set true to fail build on test
-              failures -->
-              <checkBuildResult>false</checkBuildResult>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
-
 </project>
